[package]
name = "casier"
version = "1.0.0"
description = "SyncSpace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "casier"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-token-metadata = "4.1.2"

